<resources>

    <string name="app_name">NotifyOficial</string>
    <string name="user_edit_hint">Usuario</string>
    <string name="password_edit_hint">Contraseña</string>
    <string name="start_button">Iniciar</string>
    <string name="textview_link">He olvidado mi contraseña </string>
    <string name="register_button">Registrarme</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Novedades</string>
    <string name="title_notifications">Calificar App</string>
    <string name="navigation_drawer_open">button_open</string>
    <string name="navigation_drawer_close">button_close</string>
    <string name="notify">Notify®</string>
    <string name="calificar_instituci_n">Calificar Institución</string>
    <string name="por_favor_ingrese_los_siguientes_datos">Por favor ingrese los siguientes datos</string>





</resources>
