<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/relative_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bordes_login"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center">

        <RelativeLayout
            android:id="@+id/contentPanel"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/image_log"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo2" />


        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentPanel">

            <LinearLayout
                android:id="@+id/content_into"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentPanel"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <EditText
                    android:id="@+id/user_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/user_edit_hint"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/password_edit_hint"
                    android:inputType="textPassword"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_style"
                    android:text="@string/start_button"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:stateListAnimator="@null"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    />

                <TextView
                    android:id="@+id/link_recover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/textview_link"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimario"/>

            </LinearLayout>

        </ScrollView>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorFont"
            android:layout_below="@+id/scrollView"/>

        <LinearLayout
            android:id="@+id/panel_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollView"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style2"
                android:text="@string/register_button"
                android:textColor="@color/colorPrimario"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"/>

        </LinearLayout>

    </RelativeLayout>